--- a/packages/dapp/devops/nginx.conf
+++ b/packages/dapp/devops/nginx.conf
@@ -15,8 +15,40 @@ server {
   gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
 
   location / {
-    try_files $uri /index.html;
+    try_files $uri @prerender;
   }
+
+  location @prerender {
+        proxy_set_header X-Prerender-Token $PRERENDER_TOKEN;
+        
+        set $prerender 0;
+        if ($http_user_agent ~* "googlebot|bingbot|yandex|baiduspider|twitterbot|facebookexternalhit|rogerbot|linkedinbot|embedly|quora link preview|showyoubot|outbrain|pinterest\/0\.|pinterestbot|slackbot|vkShare|W3C_Validator") {
+            set $prerender 1;
+        }
+        if ($args ~ "_escaped_fragment_") {
+            set $prerender 1;
+        }
+        if ($http_user_agent ~ "Prerender") {
+            set $prerender 0;
+        }
+        if ($uri ~* "\.(js|css|xml|less|png|jpg|jpeg|gif|pdf|doc|txt|ico|rss|zip|mp3|rar|exe|wmv|doc|avi|ppt|mpg|mpeg|tif|wav|mov|psd|ai|xls|mp4|m4a|swf|dat|dmg|iso|flv|m4v|torrent|ttf|woff|svg|eot)") {
+            set $prerender 0;
+        }
+        
+        #resolve using Google's DNS server to force DNS resolution and prevent caching of IPs
+        resolver 8.8.8.8;
+ 
+        if ($prerender = 1) {
+            
+            #setting prerender as a variable forces DNS resolution since nginx caches IPs and doesnt play well with load balancing
+            set $prerender "service.prerender.io";
+            rewrite .* /https://$host$request_uri? break;
+            proxy_pass https://$prerender;
+        }
+        if ($prerender = 0) {
+            rewrite .* /index.html break;
+        }
+    }
 
   location /static/ { 
     autoindex off;
