--- a/packages/typescript-types/package.json
+++ b/packages/typescript-types/package.json
@@ -14,11 +14,10 @@
   },
   "devDependencies": {
     "@joincivil/tslint-rules": "^2.7.1",
-    "@joincivil/typescript-typings": "^1.3.1",
     "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
     "typescript": "^3.4.1",
-    "web3": "^0.20.3"
+    "web3": "1.2.0"
   },
   "dependencies": {
     "bignumber.js": "^5.0.0"
