--- a/packages/ethapi/package.json
+++ b/packages/ethapi/package.json
@@ -24,11 +24,14 @@
   "dependencies": {
     "@joincivil/typescript-types": "^1.4.8",
     "@joincivil/utils": "^1.9.8",
+    "@types/web3": "^1.0.19",
+    "@types/web3-eth-abi": "^1.0.0",
     "bignumber.js": "^5.0.0",
     "debug": "^4.1.0",
     "ethereumjs-util": "^5.2.0",
     "lodash": "^4.17.10",
     "rxjs": "^5.5.6",
-    "web3": "^1.2.0"
+    "web3": "^1.2.0",
+    "web3-eth-abi": "^1.2.0"
   }
 }
