--- a/packages/dapp/.env
+++ b/packages/dapp/.env
@@ -7,5 +7,5 @@ REACT_APP_SUPPORTED_ETHEREUM_NETWORKS="1,4,50"
 REACT_APP_SENDGRID_REGISTRY_LIST_ID="5353193"
 REACT_APP_STRIPE_CLIENT_ID="ca_BzqgUsw7tnnCpVaoQ157mrxtuCdN7h2q"
 REACT_APP_INFURA_APP_KEY=""
-REACT_APP_FEATURE_FLAGS="uniswap,boosts-mvp"
+REACT_APP_FEATURE_FLAGS="uniswap,boosts-mvp,stripe-admin"
 SKIP_PREFLIGHT_CHECK=true
