--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -5,6 +5,7 @@
   "private": false,
   "dependencies": {
     "@joincivil/civil-sdk": "^1.16.11",
+    "@joincivil/civil-session": "^1.0.0",
     "@joincivil/components": "^1.9.7",
     "@joincivil/core": "^4.8.8",
     "@joincivil/ethapi": "^0.4.8",
