--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,8 +5,8 @@
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc -w",
+    "build": "yarn clean && tsc",
+    "build:watch": "yarn clean && tsc -w",
     "lint": "tslint --project ./",
     "test": "mocha build/test",
     "clean": "rimraf build/"
@@ -18,10 +18,10 @@
     "@joincivil/typescript-types": "^1.4.8",
     "@types/chai": "^4.1.2",
     "@types/mocha": "^5.2.5",
-    "@types/react": "^16.0.39",
+    "@types/react": "^16.8",
     "chai": "^4.1.2",
     "mocha": "^5.0.1",
-    "react": "^16.8.4",
+    "react": "^16.8",
     "typescript": "^3.4.1"
   },
   "peerDependencies": {
