--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^16.8"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^0.1.0-beta.11",
     "@joincivil/core": "^4.8.8",
     "@joincivil/ethapi": "^0.4.8",
     "@joincivil/utils": "^1.9.8",
