Newsroom manager save charter UI

--- a/packages/dapp/.env
+++ b/packages/dapp/.env
@@ -8,5 +8,5 @@ REACT_APP_SENDGRID_REGISTRY_LIST_ID="5353193"
 REACT_APP_STRIPE_CLIENT_ID="ca_BzqgUsw7tnnCpVaoQ157mrxtuCdN7h2q"
 REACT_APP_STRIPE_API_KEY="pk_test_3a5qmy1MuBEcooDr5wL8bRz9"
 REACT_APP_INFURA_APP_KEY=""
-REACT_APP_FEATURE_FLAGS="uniswap,boosts-mvp,stripe-admin,boost-stripe"
+REACT_APP_FEATURE_FLAGS="uniswap,boosts-mvp,stripe-admin,boost-stripe,newsroom-channels"
 SKIP_PREFLIGHT_CHECK=true
