--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,9 @@ jobs:
                 name: Running migrations
                 command: yarn lerna run --scope=@joincivil/contracts migrate:ganache
             - run:
-                name: Running tests
-                command: yarn test
+                name: Running tests (except contracts)
+                command: |
+                    yarn test-nocontracts
     coverage:
         <<: *defaults
         steps:
