--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prettier": "prettier --config .prettierrc.yaml --write --list-different './**/*.{ts,tsx,json,md}'",
     "prettier:package": "[ $PACKAGE ] && prettier --config .prettierrc.yaml --write --list-different ./packages/$PACKAGE'/**/*.{ts,tsx,json,md}' || echo 'Specify a package name as environment variable to run prettier on just that package, e.g. `PACKAGE=dapp yarn prettier:package`'",
     "clean": "lerna run clean --parallel",
-    "test": "lerna run test --stream --sort",
-    "test-nocontracts": "lerna run test --stream --sort --ignore contracts",
+    "test": "lerna run test --stream --sort --ignore @joincivil/contracts",
+    "test-contracts": "lerna run test --stream --sort",
     "lerna:run": "lerna run",
     "prepare": "lerna run prepare --no-sort",
     "ganache": "run-p ganache:raw 'lerna:run --scope @joincivil/contracts migrate:ganache'",
