ci(dapp): try to actually use yarn cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,13 @@ jobs:
             - checkout
             - restore_cache:
                 name: Restore yarn cache
-                key: node-modules-{{ .Branch }}-{{ checksum "yarn.lock" }}
+                key: node-modules-{{ checksum "yarn.lock" }}
             - run:
                 name: Install modules
                 command: yarn --frozen-lockfile install
             - save_cache:
                 name: Save yarn cache
-                key: node-modules--{{ .Branch }}-{{ checksum "yarn.lock" }}
+                key: node-modules-{{ checksum "yarn.lock" }}
                 paths:
                     - node_modules
             - run:
