--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@joincivil/root", 
+  "name": "@joincivil/root",
   "private": true,
-  "homepage": "https://joincivil.github.io/civil",
+  "homepage": "https://civil.co",
   "workspaces": [
     "packages/*"
   ],
@@ -48,6 +48,7 @@
     "husky": "^2.1.0",
     "lcov-result-merger": "^3.1.0",
     "lerna": "^3.15.0",
+    "multi-semantic-release": "^1.1.0",
     "ncp": "^2.0.0",
     "npm-run-all": ">=4.1.5",
     "prettier": "1.18.2",
