--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,30 +180,9 @@ jobs:
 
 workflows:
     version: 2
-    # nightly:
-    #     triggers:
-    #         - schedule:
-    #             cron: "0 0 * * *" # Midnight UTC
-    #             filters:
-    #                 branches:
-    #                     only:
-    #                         - master
-    #                         - production
-    #     jobs:
-    #         - build
-    #         - coverage:
-    #             requires:
-    #                 - build
-    pull-request:
+    build-and-deploy:
         jobs:
-            - build:
-                filters:
-                    branches:
-                        ignore:
-                            - master
-                            - production
-    deployment:
-        jobs:
+            - build
             - setup-gcp:
                 context: gcp-common
                 filters:
