build(sdk): set gcp-common

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,7 +185,8 @@ workflows:
     version: 2
     build-and-deploy:
         jobs:
-            - build
+            - build:
+                context: gcp-common
             - setup-gcp:
                 context: gcp-common
                 requires:
