fix(sdk): package.json public

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@joincivil/sdk",
   "version": "1.0.0",
+  "private": false,
   "description": "",
   "main": "index.js",
   "scripts": {
