fix(sdk): add publishConfig to package.json

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "test": "echo \"hello from test dk\""
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "",
   "license": "ISC"
 }
