--- a/packages/newsroom-signup/package.json
+++ b/packages/newsroom-signup/package.json
@@ -55,5 +55,8 @@
   "peerDependencies": {
     "react": "^16.8",
     "react-dom": "^16.8"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
