--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -84,5 +84,8 @@
     "react-rte": "^0.16.1",
     "rxjs": "^5.5.6",
     "styled-components": "^3.2.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
