--- a/packages/typescript-typings/package.json
+++ b/packages/typescript-typings/package.json
@@ -4,5 +4,8 @@
   "description": "Typescript type roots for external projects and internal modifications",
   "license": "Apache-2.0",
   "homepage": "https://github.com/joincivil/Civil",
-  "author": "The Civil Media Company"
+  "author": "The Civil Media Company",
+  "publishConfig": {
+    "access": "public"
+  }
 }
