--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -49,5 +49,8 @@
   "bugs": {
     "url": "https://github.com/joincivil/Civil/issues"
   },
-  "homepage": "https://github.com/joincivil/Civil"
+  "homepage": "https://github.com/joincivil/Civil",
+  "publishConfig": {
+    "access": "public"
+  }
 }
