fix(newsroom-signup): react-redux upgrade
this didn't get caught when I ran `yarn upgrade-interactive` since it is in devDependencies (I think)

--- a/packages/typescript-types/package.json
+++ b/packages/typescript-types/package.json
@@ -9,6 +9,7 @@
   "author": "The Civil Media Company",
   "scripts": {
     "build": "tsc",
+    "build:watch": "tsc -w",
     "clean": "rimraf build/",
     "lint": "tslint --project ./"
   },
