--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -63,6 +63,7 @@
     "eject": "react-scripts eject",
     "lint": "tslint --project ./",
     "clean": "rimraf build/",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -73,6 +74,7 @@
     "@types/react-router-dom": "^4.2.5",
     "gh-pages": "^1.1.0",
     "react-app-rewired": "^2.1.3",
+    "source-map-explorer": "^2.0.1",
     "typescript": "^3.6.2"
   },
   "browserslist": [
