--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -132,7 +132,7 @@
     "rimraf": "^2.6.2",
     "semantic-release": "^15.13.3",
     "tslint": "^5.17.0",
-    "typescript": "3.3.4000"
+    "typescript": "^3.6.2"
   },
   "peerDependencies": {
     "styled-components": ">= 3"
