--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^23.3.5",
     "@types/prop-types": "15.7.0",
     "@types/react": "^16.8",
+    "@types/react-avatar-editor": "^10.3.4",
     "@types/react-dom": "^16.8",
     "@types/react-dropzone": "^4.2.2",
     "@types/react-test-renderer": "^16.8.1",
@@ -81,6 +82,7 @@
     "react-add-to-calendar": "^0.1.5",
     "react-apollo": "^2.3.3",
     "react-async-script": "^1.0.0",
+    "react-avatar-editor": "^11.0.7",
     "react-docgen-typescript-loader": "^3.1.0",
     "react-dropzone": "^10.1.4",
     "react-helmet": "^5.2.0",
