--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -88,6 +88,7 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-rte": "^0.16.1",
+    "react-stripe-elements": "^5.0.1",
     "rxjs": "^5.5.6",
     "styled-components": "^5.0.0-beta.8",
     "web3": "^1.2.1"
