--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,12 @@ jobs:
                 name: Releasing
                 command: |
                     yarn release
+                    pwd
+            - persist_to_workspace:
+                root: ./
+                paths:
+                    - ./packages/dapp/build
+                    - ./packages/dapp/devops
     coverage:
         <<: *defaults
         steps:
@@ -107,6 +113,10 @@ jobs:
             - run:
                 name: Build Container
                 command: |
+                    find /root/packages
+                    cp -r /root/packages/dapp/build ./packages/dapp/build
+                    cp -r /root/packages/dapp/devops ./packages/dapp/devops
+
                     TAG=`echo $CIRCLE_BRANCH | sed 's/\\//_/g'`
                     docker build -f Dockerfile-dapp . \
                     --build-arg version=$CIRCLE_SHA1 \
