--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -90,6 +90,7 @@
     "react-docgen-typescript-loader": "^3.1.0",
     "react-dropzone": "^10.1.4",
     "react-helmet": "^5.2.0",
+    "react-input-slider": "^5.1.2",
     "react-router-dom": "^4.3.1",
     "react-rte": "^0.16.1",
     "react-stripe-elements": "^5.0.1",
