--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,6 @@ jobs:
             - run:
                 name: Build Container
                 command: |
-                    find /root/packages
                     cp -r /root/packages/dapp/build ./packages/dapp/build
                     cp -r /root/packages/dapp/devops ./packages/dapp/devops
 
@@ -143,6 +142,9 @@ jobs:
             - run:
                 name: Build Container
                 command: |
+                    cp -r /root/packages/dapp/build ./packages/dapp/build
+                    cp -r /root/packages/dapp/devops ./packages/dapp/devops
+
                     TAG=`echo $CIRCLE_BRANCH | sed 's/\\//_/g'`
                     docker build -f Dockerfile-dapp . \
                     --build-arg version=$CIRCLE_SHA1 \
