fix(kirby): show web3enable view on saved preference
if logged out of portis from another window and then reload the page the portis login screen will be displayed from the iframe, but the kirby view is not displayed so the user cannot do anything.

--- a/packages/kirby/package.json
+++ b/packages/kirby/package.json
@@ -20,6 +20,7 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
     "ethers": "^4.0.37",
+    "query-string": "^6.8.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
