--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -59,6 +59,7 @@
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.9.0",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-stripe-elements": "^4.0.0",
     "resolve": "1.10.0",
     "rxjs-compat": "^6.5.2",
