--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -67,7 +67,8 @@
     "styled-components": "^5.0.0-beta.8"
   },
   "dependencies": {
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0"
   },
   "publishConfig": {
     "access": "public"
