chore: add root commits contract

--- a/packages/contracts/.soliumignore
+++ b/packages/contracts/.soliumignore
@@ -1,3 +1,4 @@
 node_modules/
 contracts/installed_contracts/PLCRVoting.sol
 contracts/installed_contracts/Parameterizer.sol
+contracts/RootCommits/RootCommits.sol
