--- a/packages/dapp/devops/nginx.conf
+++ b/packages/dapp/devops/nginx.conf
@@ -18,6 +18,12 @@ server {
     try_files $uri @prerender;
   }
 
+   ### force utf-8 and content type
+  location = /.well-known/apple-developer-merchantid-domain-association {
+    types { } default_type "text/plain;charset=utf-8";
+    add_header x-robots-tag "noindex, nofollow";
+  }
+
   location @prerender {
         proxy_set_header X-Prerender-Token $PRERENDER_TOKEN;
         
