feat(sdk): actual story boost embed [CIVIL-1109] [CIVIL-1167]
- Remove @joincivil deps from embed loader - only React and Apollo now
- Full create/get externallink gql flow
- Copy iframe + wrapper from project boost
- Handle loading and error states
- Update @joincivil/sdk scripts to better test embed
- Lots of other things

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -13,6 +13,9 @@
     "@joincivil/elements": "^0.0.1",
     "@joincivil/utils": "^1.9.8",
     "@svgr/webpack": "4.1.0",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link-http": "^1.5.9",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -76,16 +79,15 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "start:boost": "OPEN_PATH=boost-embed.html node scripts/start.js",
-    "build": "yarn package:build",
-    "build:watch": "yarn package:copy:images && tsc -w",
+    "sdk:start": "node scripts/start.js",
+    "sdk:start:boost-embed": "OPEN_PATH=boost-embed.html node scripts/start.js",
+    "sdk:build": "node scripts/build.js",
+    "build": "yarn clean && yarn copy:images && tsc",
+    "build:watch": "yarn copy:images && tsc -w",
     "test": "node scripts/test.js",
     "lint": "tslint --project ./",
-    "package:clean": "rimraf build/package",
-    "package:copy:images": "mkdir -p build/package/images && cp -a src/images/. build/package/images",
-    "package:build": "yarn package:clean && yarn package:copy:images && tsc",
-    "package:watch": "yarn package:copy:images && tsc -w",
+    "clean": "rimraf build/package",
+    "copy:images": "mkdir -p build/package/images && cp -a src/images/. build/package/images",
     "prepublishOnly": "yarn package:build",
     "prettier": "prettier --config .prettierrc.yaml --write --list-different './**/*.{ts,tsx,json,md}'",
     "prettier:lint": "prettier --config .prettierrc.yaml --list-different './**/*.{ts,tsx,json,md}'",
