fix(dapp): don't cache index.html

--- a/packages/dapp/devops/nginx.conf
+++ b/packages/dapp/devops/nginx.conf
@@ -52,6 +52,7 @@ server {
             proxy_pass https://$prerender;
         }
         if ($prerender = 0) {
+            add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
             rewrite .* /index.html break;
         }
     }
