--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -79,11 +79,13 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
+    "build": "yarn package:build && yarn sdk:build",
+    "build:watch": "yarn package:build:watch",
     "sdk:start": "node scripts/start.js",
     "sdk:start:boost-embed": "OPEN_PATH=boost-embed.html node scripts/start.js",
     "sdk:build": "node scripts/build.js",
-    "build": "yarn clean && yarn copy:images && tsc",
-    "build:watch": "yarn copy:images && tsc -w",
+    "package:build": "yarn clean && yarn copy:images && tsc",
+    "package:build:watch": "yarn copy:images && tsc -w",
     "test": "node scripts/test.js",
     "lint": "tslint --project ./",
     "clean": "rimraf build/package",
