--- a/packages/ethapi/package.json
+++ b/packages/ethapi/package.json
@@ -17,7 +17,6 @@
     "@joincivil/typescript-types": "^1.4.8",
     "@types/debug": "^0.0.30",
     "@types/lodash": "^4.14.99",
-    "@types/web3": "^1.0.19",
     "typescript": "^3.6.2"
   },
   "bugs": {
@@ -31,13 +30,15 @@
     "ethereumjs-util": "^5.2.0",
     "lodash": "^4.17.10",
     "rxjs": "^5.5.6",
-    "web3": "^1.2.1",
-    "web3-core": "^1.2.1",
-    "web3-eth": "^1.2.1",
-    "web3-eth-abi": "^1.2.1",
-    "web3-eth-contract": "^1.2.1",
-    "web3-providers": "^1.0.0-beta.55",
-    "web3-utils": "^1.2.1"
+    "web3": "^1.2.2",
+    "web3-core": "^1.2.2",
+    "web3-core-helpers": "^1.2.2",
+    "web3-eth": "^1.2.2",
+    "web3-eth-abi": "^1.2.2",
+    "web3-eth-contract": "^1.2.2",
+    "web3-providers-http": "^1.2.2",
+    "web3-providers-ws": "^1.2.2",
+    "web3-utils": "^1.2.2"
   },
   "publishConfig": {
     "access": "public"
