--- a/packages/typescript-types/package.json
+++ b/packages/typescript-types/package.json
@@ -16,14 +16,15 @@
   "devDependencies": {
     "@joincivil/tslint-rules": "^2.7.1",
     "@joincivil/typescript-typings": "^1.3.1",
-    "@types/web3": "^1.0.20",
     "rimraf": "^2.6.2",
     "tslint": "^5.17.0",
     "typescript": "^3.6.2",
-    "web3": "^1.2.1"
+    "web3": "^1.2.2"
   },
   "dependencies": {
-    "ethers": "^4.0.27"
+    "ethers": "^4.0.27",
+    "web3-core": "^1.2.2",
+    "web3-utils": "^1.2.2"
   },
   "publishConfig": {
     "access": "public"
