--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -42,6 +42,8 @@
     "graphql-tag": "^2.9.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
+    "iframe-resizer": "^4.2.6",
+    "iframe-resizer-react": "^1.0.1",
     "ipfs-http-client": "^29.1.1",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
@@ -118,6 +120,7 @@
     "@storybook/addons": "^5.0.10",
     "@storybook/react": "^5.0.10",
     "@storybook/theming": "^5.0.10",
+    "@types/iframe-resizer": "^3.5.8",
     "@types/jest": "24.0.11",
     "@types/js-cookie": "^2.2.1",
     "@types/lodash": "^4.14.136",
