--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -80,16 +80,17 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
-    "build": "yarn package:build && yarn sdk:build",
+    "build": "yarn clean && yarn sdk:build && yarn package:build",
     "build:watch": "yarn package:build:watch",
     "sdk:start": "node scripts/start.js",
     "sdk:start:boost-embed": "OPEN_PATH=boost-embed.html node scripts/start.js",
     "sdk:build": "node scripts/build.js",
-    "package:build": "yarn clean && yarn copy:images && tsc",
+    "package:build": "yarn package:clean && yarn copy:images && tsc",
     "package:build:watch": "yarn copy:images && tsc -w",
+    "package:clean": "rimraf build/package",
+    "clean": "rimraf build",
     "test": "node scripts/test.js",
     "lint": "tslint --project ./",
-    "clean": "rimraf build/package",
     "copy:images": "mkdir -p build/package/images && cp -a src/images/. build/package/images",
     "prepublishOnly": "yarn build",
     "prettier": "prettier --config .prettierrc.yaml --write --list-different './**/*.{ts,tsx,json,md}'",
