--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -17,6 +17,7 @@
     "@kirby-web3/ethereum-react": "^1.2.13",
     "@redux-beacon/google-analytics": "^1.2.0",
     "@sentry/browser": "^5.0.5",
+    "@sentry/integrations": "^5.8.0",
     "@types/diff": "^4.0.2",
     "@types/highlight.js": "^9.12.2",
     "@types/react-redux": "^7.1.1",
