build(dapp): raise max_old_space_size

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ defaults: &defaults
 jobs:
     build:
         <<: *defaults
+        resource_class: medium+
         steps:
             - checkout
             - restore_cache:
