--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -45,7 +45,7 @@
     "immutable": "^4.0.0-rc.12",
     "rxjs": "^5.5.6",
     "sanitize-html": "^1.20.0",
-    "web3-utils": "^2.0.0-alpha"
+    "web3-utils": "^1.2.4"
   },
   "bugs": {
     "url": "https://github.com/joincivil/Civil/issues"
