fix(dapp): redirect some pages to learn.civil.co

--- a/packages/dapp/devops/nginx.conf
+++ b/packages/dapp/devops/nginx.conf
@@ -1,3 +1,11 @@
+map $request_uri $redirect_uri {
+    /credibility-indicators         https://learn.civil.co/credibility-indicators;
+    /about                          https://learn.civil.co/about;
+    /constitution                   https://learn.civil.co/constitution;
+    /help                           https://learn.civil.co/help;
+    /help/                          https://learn.civil.co/help;
+}
+
 server {
   listen 3000 default_server;
   root /usr/share/nginx/html;
@@ -13,6 +21,10 @@ server {
   gzip_http_version 1.1;
   gzip_min_length 256;
   gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
+
+  if ( $redirect_uri ) {
+      return 301 $redirect_uri;
+  }
 
   location / {
     try_files $uri @prerender;
