fix(dapp): missed a couple redirects

--- a/packages/dapp/devops/nginx.conf
+++ b/packages/dapp/devops/nginx.conf
@@ -1,7 +1,11 @@
 map $request_uri $redirect_uri {
     /credibility-indicators         https://learn.civil.co/credibility-indicators;
     /about                          https://learn.civil.co/about;
+    /about/                         https://learn.civil.co/about;
+    /contact                        https://learn.civil.co/contact;
+    /contact/                       https://learn.civil.co/contact;
     /constitution                   https://learn.civil.co/constitution;
+    /constitution/                  https://learn.civil.co/constitution;
     /help                           https://learn.civil.co/help;
     /help/                          https://learn.civil.co/help;
 }
