--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -13,6 +13,7 @@
     "@joincivil/elements": "^0.0.1",
     "@joincivil/typescript-types": "^1.4.9",
     "@joincivil/utils": "^1.9.8",
+    "@sentry/browser": "^5.0.5",
     "@svgr/webpack": "4.1.0",
     "apollo-cache-inmemory": "^1.3.12",
     "apollo-client": "^2.4.8",
