fix(dapp): add redirect to civil.co/our-team

--- a/packages/dapp/devops/nginx.conf
+++ b/packages/dapp/devops/nginx.conf
@@ -8,6 +8,8 @@ map $request_uri $redirect_uri {
     /constitution/                  https://learn.civil.co/constitution;
     /help                           https://learn.civil.co/help;
     /help/                          https://learn.civil.co/help;
+    /our-team                       https://learn.civil.co/team;
+    /our-team/                      https://learn.civil.co/team;
 }
 
 server {
