feat(dapp): wip

--- a/packages/dapp/.env
+++ b/packages/dapp/.env
@@ -13,3 +13,4 @@ SKIP_PREFLIGHT_CHECK=true
 REACT_APP_KIRBY_TARGET_ORIGIN="http://localhost:3000"
 REACT_APP_KIRBY_IFRAME_SRC="http://localhost:3000/kirby"
 REACT_APP_PORTIS_APP_ID="1a382335-7ba0-4834-a3cd-dd1eff365f98"
+REACT_APP_KIRBY_ID_HUB_URI="https://id.staging.civil.app/v1/hedgehog"
