--- a/packages/kirby/package.json
+++ b/packages/kirby/package.json
@@ -9,16 +9,19 @@
   "types": "build/index.d.ts",
   "dependencies": {
     "@joincivil/elements": "^0.0.1",
-    "@kirby-web3/child-core": "^1.7.0",
-    "@kirby-web3/child-react": "^1.1.13",
-    "@kirby-web3/plugin-connext": "^1.1.13",
-    "@kirby-web3/plugin-ethereum": "^1.11.0",
+    "@kirby-web3/child-core": "^1.8.0",
+    "@kirby-web3/child-react": "^1.1.16",
+    "@kirby-web3/plugin-connext": "^1.1.18",
+    "@kirby-web3/plugin-ethereum": "^1.12.1",
+    "@kirby-web3/plugin-trustedweb": "^1.2.2",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/reach__router": "^1.2.4",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
+    "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^4.0.37",
+    "qrcode.react": "^1.0.0",
     "query-string": "^6.8.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
