--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -14,7 +14,7 @@
     "@joincivil/sdk": "^2.0.0",
     "@joincivil/typescript-types": "^1.4.9",
     "@joincivil/utils": "^1.9.9",
-    "@kirby-web3/ethereum-react": "^1.2.17",
+    "@kirby-web3/ethereum-react": "^1.3.3",
     "@redux-beacon/google-analytics": "^1.2.0",
     "@sentry/browser": "^5.0.5",
     "@sentry/integrations": "^5.8.0",
@@ -27,6 +27,7 @@
     "apollo-boost": "^0.1.16",
     "connected-react-router": "^6.3.1",
     "diff": "^4.0.1",
+    "ethereum-blockies-base64": "^1.0.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
