--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -76,6 +76,7 @@
     "@kirby-web3/ethereum-react": "^1.2.17",
     "@kirby-web3/parent-core": "^1.3.2",
     "@kirby-web3/plugin-ethereum": "^1.11.0",
+    "@types/stripe-v3": "3.1.15",
     "@types/styled-components": "^4.1.18",
     "apollo-client": "^2.6.4",
     "apollo-storybook-react": "^0.1.8",
@@ -93,8 +94,9 @@
     "react-input-slider": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-rte": "^0.16.1",
-    "react-stripe-elements": "^5.0.1",
+    "react-stripe-elements": "^6.0.0",
     "rxjs": "^5.5.6",
+    "stripe": "^8.19.0",
     "styled-components": "^5.0.0-beta.8",
     "web3": "^1.2.4"
   },
