--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -45,6 +45,7 @@
     "react-router-named-routes": "^0.0.23",
     "react-rte": "^0.16.1",
     "react-scripts": "^2.1.8",
+    "react-stripe-elements": "^6.0.0",
     "redux": "^4.0.0",
     "redux-beacon": "^2.0.5",
     "redux-thunk": "^2.2.0",
