--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -38,6 +38,7 @@
     "@types/react-test-renderer": "^16.9.1",
     "@types/storybook__addon-info": "^4.1.1",
     "@types/storybook__react": "^3.0.7",
+    "@types/stripe-v3": "^3.1.15",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-require-context-hook": "^1.0.0",
@@ -93,8 +94,9 @@
     "react-input-slider": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-rte": "^0.16.1",
-    "react-stripe-elements": "^5.0.1",
+    "react-stripe-elements": "^6.0.0",
     "rxjs": "^5.5.6",
+    "stripe": "^8.19.0",
     "styled-components": "^5.0.0-beta.8",
     "web3": "^1.2.4"
   },
