--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -25,6 +25,7 @@
     "@types/sanitize-html": "^1.14.0",
     "@types/storejs": "^2.0.2",
     "apollo-boost": "^0.1.16",
+    "apollo-client": "^2.6.8",
     "connected-react-router": "^6.3.1",
     "diff": "^4.0.1",
     "graphql": "^14.0.2",
