chore: small fixes to payment flows

--- a/packages/dapp/.env
+++ b/packages/dapp/.env
@@ -8,7 +8,7 @@ REACT_APP_SENDGRID_REGISTRY_LIST_ID="5353193"
 REACT_APP_STRIPE_CLIENT_ID="ca_BzqgUsw7tnnCpVaoQ157mrxtuCdN7h2q"
 REACT_APP_STRIPE_API_KEY="pk_test_3a5qmy1MuBEcooDr5wL8bRz9"
 REACT_APP_INFURA_APP_KEY="dff426b98d934c4fa69aa0909b137cea"
-REACT_APP_FEATURE_FLAGS="uniswap,boosts-mvp,stripe-admin,boost-stripe,newsroom-channels,kirby"
+REACT_APP_FEATURE_FLAGS="uniswap,boosts-mvp,stripe-admin,boost-stripe,newsroom-channels,kirby,payment-intents"
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_KIRBY_TARGET_ORIGIN="http://localhost:3000"
 REACT_APP_KIRBY_IFRAME_SRC="http://localhost:3000/kirby"
